k8s/oracle/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-api
  namespace: thecloud
spec:
  selector:
    app: cloud-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
